cluster/policies/kyverno/inject-timezone.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-timezone
  annotations:
    policies.kyverno.io/title: Inject timezone
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects an initContainer to Pods and setup TZ
      environment variable so the container will have the correct
      time.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
  - name: inject-timezone
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
          - api
          - drone-build
          - system-rook-ceph
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
          - name: provide-timezone
            image: quay.io/k8tz/k8tz:0.12.0@sha256:04d8ea142ddc586357fa320c0931b26eb7e2c00edcc23aaf8dc4114151989a90
            imagePullPolicy: IfNotPresent
            resources:
              requests:
                cpu: 10m
                memory: 100Mi
            volumeMounts:
            - mountPath: /mnt/zoneinfo
              name: timezone
            args:
            - bootstrap
          containers:
          - (name): "*"
            volumeMounts:
            - mountPath: /etc/localtime
              name: timezone
              readOnly: true
              subPath: &timezone America/Chicago
            - mountPath: /usr/share/zoneinfo
              name: timezone
              readOnly: true
            env:
            - name: TZ
              value: *timezone
          volumes:
          - name: timezone
            emptyDir: {}
